# Verdantia

./: AGENT.md  Makefile  README.md  __main__.py  package.json  pnpm-lock.yaml  tick_controller.py
.github/prompts/: plan-verdantiaPlan.prompt.md
api/: README.md  main.py
api/core/: game_manager.py
archive/core/: README.md  pyproject.toml
archive/core/verdantia/: app.py
archive/core/world/map/: map_manager.py  map_view.py  tile.py
backend/: README.md  pyproject.toml
backend/migrations/: README.md  env.py
backend/tests/: conftest.py  test_app.py
backend/verdantia/: __init__.py  app.py  ws_protocol.py
backend/verdantia/core/: entity.py  game.py  skill.py
backend/verdantia/plugins/: plugin_manager.py
backend/verdantia/storage/: adapter.py
console/: layout_manager.py
frontend/: .eslintrc.cjs  index.html  package.json  vitest.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/__tests__/: App.test.tsx
frontend/src/state/: useGameStore.ts
frontend/src/ws/: protocol.ts
src/world/: world_manager.py
src/world/map/: __init__.py
ui/: package-lock.json  package.json
ui/src/: App.svelte
ui/src/components/: websocketTest.svelte
world/: world_manager.py
world/map/: map_manager.py  perlin_noise.py  perlin_noise_map.py  tile.py  tile_type.py
