[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verdantia"
version = "0.1.0"
description = "A modular world simulation with Rich + Textual rendering."
authors = [
    { name = "Tyler Wilson", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8.1,<4.0.0"
dependencies = [
    "textual>=0.59.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "noise>1.0.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["src"]
